--- a/doc/cha-cert-auth.texi
+++ b/doc/cha-cert-auth.texi
@@ -580,7 +580,7 @@ $ certtool --generate-request --load-privkey key.pem \
 @end smallexample
 
 If the private key is stored in a smart card you can generate
-a request by specifying the private key object URL (see @ref{Invoking p11tool}
+a request by specifying the private key object URL (see @ref{The p11tool application}
 on how to obtain the URL).
 
 @smallexample
